Fix header footer overflow bug

--- a/app/frontend/styles/Footer.module.css
+++ b/app/frontend/styles/Footer.module.css
@@ -1,5 +1,5 @@
 .Footer {
-  width: 100vw;
+  width: 100%;
   height: 5rem;
   background-color: var(--black);
   position: relative;
